# codetta

./: .editorconfig  .gitattributes  .gitignore  .mailmap  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  build-installer.bat  index.html  package-lock.json  package.json  pnpm-lock.yaml  start.bat  start.ps1  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yml
assets/: LANDING_PAGE_UPDATES.md
docs/: CLAUDE_CODE_ROADMAP.md  LAUNCH.md
src/: App.css  App.tsx  accelMatch.ts  actions.ts  agentMode.ts  ai.ts  aiBus.ts  aiPrivacy.ts  aiTaskStore.ts  aiTemplates.ts  aiTools.ts  aiUsageLog.ts  bookmarks.ts  chatHistory.ts  chatTextUtils.ts  closedTabsStack.ts  commandHistory.ts  composeSnapshots.ts  deployLog.ts  diagnostics.ts  dialog.ts  dragState.ts  editorConfig.ts  editorSettings.ts  editorState.ts  editorViewState.ts  fileOutline.ts  footprintBus.ts  footprintSettings.ts  fsBus.ts  gitStatusStore.ts  ipc.ts  langDetect.ts  lineBookmarks.ts  localStore.ts  markdown.ts  modelCatalog.ts  notify.ts  notifyBus.ts  paletteBus.ts  (+21 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: atomic.rs  claude_code.rs  claude_mcp.rs  claude_perm.rs  claude_usage.rs  fs_ops.rs  git.rs  lib.rs  main.rs  pty.rs  search.rs  sftp.rs  sysmon.rs  watcher.rs  workspace.rs
src/components/: AIChatPanel.tsx  AIChatsRail.tsx  AIIcon.tsx  ActivityBar.tsx  AgentModeShell.tsx  BookmarksPanel.tsx  ClaudePermissionOverlay.tsx  CommandPalette.tsx  ContextMenu.tsx  CustomizationsModal.tsx  DiagnosticsPanel.tsx  Dialog.tsx  DiffModal.tsx  DiffView.tsx  DragGhost.tsx  EditorBreadcrumbs.tsx  EditorPane.tsx  FileEditorPane.tsx  FileHistoryModal.tsx  FilePopupModal.tsx  FileTree.tsx  FootprintModal.tsx  Icon.tsx  LineBookmarksPanel.tsx  MarkdownPreview.tsx  McpServerBrowser.tsx  ModelBrowser.tsx  OutlinePanel.tsx  PaneNode.tsx  PluginsPane.tsx  RecentFilesOverlay.tsx  RemoteSftpPanel.tsx  SearchPanel.tsx  SettingsModal.tsx  ShortcutReferenceModal.tsx  SidebarStack.tsx  SkillsPane.tsx  SourceControlPanel.tsx  Splash.tsx  StatusBar.tsx  (+22 more)
src/providers/: anthropic.ts  claudeCode.ts  index.ts  keys.ts  ollama.ts  openai.ts  types.ts
