[package]
name = "lite-coder-pro"
version = "0.1.0"
description = "Lite Coder Pro"
authors = ["Bishal"]
edition = "2021"

[lib]
name = "lite_coder_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
dirs = "5"
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
anyhow = "1"
