[package]
name = "codetta"
version = "0.2.0"
description = "A lightweight desktop code editor with first-class AI."
authors = ["Codetta Maintainers <getcodetta@gmail.com>"]
edition = "2021"
license-file = "../LICENSE"
homepage = "https://codetta.dev"
repository = "https://github.com/getcodetta/codetta"

[lib]
name = "codetta_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
dirs = "5"
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
anyhow = "1"
notify = "6"
notify-debouncer-mini = "0.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
