[package]
name = "codetta"
version = "0.4.0"
description = "A lightweight desktop code editor with first-class AI."
authors = ["Codetta Maintainers <getcodetta@gmail.com>"]
edition = "2021"
license-file = "../LICENSE"
homepage = "https://codetta.dev"
repository = "https://github.com/getcodetta/codetta"

[lib]
name = "codetta_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
dirs = "5"
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
anyhow = "1"
notify = "6"
notify-debouncer-mini = "0.4"
# Tiny synchronous HTTP server for the Claude Code PreToolUse hook
# callback endpoint. We host this locally so the CLI's hook command
# (a curl POST) can ask the GUI for permission decisions and the GUI
# can respond before the agent's tool call runs.
tiny_http = "0.12"
# Decode legacy text encodings (GBK, GB2312, Big5, Shift-JIS, EUC-KR,
# Windows-1252, …) when read_file hits a non-UTF-8 file. Pure Rust.
encoding_rs = "0.8"
# Sniffs UTF-8 / UTF-16 BOMs and most CJK encodings well enough for an
# editor-grade fallback when the file isn't valid UTF-8.
chardetng = "0.1"
# Regex engine for the Search panel's regex-mode toggle. Default
# features (Unicode tables, multi-line) are fine — we only need the
# `Regex` API.
regex = "1"
# SFTP client. russh is pure Rust (no libssh2 / native deps), works on
# Windows out of the box. russh-sftp layers the SFTP protocol on top.
russh = "0.46"
russh-sftp = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "fs"] }
async-trait = "0.1"
# Recycle Bin / Trash / GIO trash for file deletes from the explorer.
# remove_dir_all on a mis-click was unrecoverable; every desktop OS has
# a native undo path — use it.
trash = "5"
sysinfo = "0.39.3"
ureq = { version = "3.3.0", features = ["json"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
